fix: line break in release text
Fixed release description showing up as single line by adding <pre> tags
in html.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -202,6 +202,7 @@ a.button {
 
 #release-text-input {
 	resize: none;
+	white-space: pre-wrap;
 }
 
 
